# hiveos-financial-brain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HIVEOS-ARCHITECTURE-SNAPSHOT.md  MANIFEST.md  README.fa.md  README.md  ROADMAP.md  docker-compose.yml  generate_kb.py  hiveos-skill.md  hiveos.db  hiveos.db-shm  hiveos.db-wal  knowledge_nodes.json  pyproject.toml  working_memory.md
.github/workflows/: deploy-kb.yml  release.yml  test.yml
.obsidian/: app.json  community-themes.json  file-explorer.json
deploy/: DEPLOY.md  deploy.sh  entrypoint.sh
docs/: CODE_SIGNING.md
docs/01-Product/: 00-Index.md  01-Product-Bible.md  02-Product-Principles.md  03-Product-Glossary.md  04-Product-Vision.md  05-Product-Scope.md  06-Product-Decisions.md  07-Architecture-Principles.md  08-Runtime-Architecture.md  (+12 more)
kb/: index.html
playground-ui/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_agent_registry.py  test_analytics.py  test_audit.py  test_auth_middleware.py  test_brain.py  test_build.py  test_comm_bus.py  test_config_service.py  test_dashboard.py  test_dashboard_v2.py  test_docker_smoke.py  test_domain.py  test_domain_pack_downloader.py  test_domain_pack_manager.py  test_engine.py  test_filewatch.py  test_knowledge_service.py  test_learning.py  test_license.py  test_migrations.py  test_playground.py  test_privacy.py  test_rbac.py  test_registry.py  test_resilience.py  test_runner.py  test_storage.py  test_sync.py  test_task_router.py  test_update.py  test_workflow_edit.py  test_workspace.py
(+249 files in other folders)
