[project]
name = "hiveos"
version = "0.1.0"
description = "HiveOS - Multi-Agent Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
hive = "hiveos.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hiveos*", "hiveos.*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
